<resources>
    <string name="app_name">mokao</string>
    <string name="forgetPassword">忘记密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="hint_username">请输入手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_password_second">请再次输入密码</string>
    <string name="finish">完成</string>
    <string name="hint_code">请输入验证码</string>
    <string name="send_phone_code">发送验证码</string>
    <string name="next_step">下一步</string>
    <string name="star">*</string>
    <string name="hint_name">请输入姓名</string>
    <string name="hint_age">请输入年龄</string>
    <string name="hint_hangye">请输入行业</string>
    <string name="hint_company">请输入所属公司（选填）</string>
    <string name="hint_email">请输入邮箱（选填）</string>
    <string name="perfectinfo">完善信息</string>
    <string name="setpassword">设置密码</string>
    <string name="toast_phone_notnull">电话号码不能为空</string>
    <string name="toast_phone_yes">请输入正确电话号码</string>
    <string name="toast_pass_notnull">密码不能为空</string>
    <string name="toast_code_notnull">验证码不能为空</string>
    <string name="toast_pass_six">密码大6位</string>
    <string name="toast_code_six">请输入正确验证码</string>
    <string name="my_exam_time">总考试次数</string>
    <string name="my_useful_time">可用考试次数</string>
    <string name="my_userinfo">个人资料</string>
    <string name="my_pay">充值</string>
    <string name="my_error">我的错题库</string>
    <string name="my_setting">设置</string>
    <string name="pay">购买</string>
    <string name="agree_1">购买代表您已经同意</string>
    <string name="agree_2">《省安监平台购买协议》</string>
    <string name="pay_title">充值</string>
    <string name="set_card">绑定银行卡</string>
    <string name="signout">退出登录</string>
    <string name="yijianfankui">意见反馈</string>
    <string name="setting">设置</string>
    <string name="store">商城</string>
    <string name="start_exam">开始考试</string>
    <string name="again_think">我再想想</string>
    <string name="finish_exam">结束此次考试</string>
    <string name="next_answer">下一题</string>
    <string name="prev_answer">上一题</string>
    <string name="examing">正在考试中</string>
    <string name="toast_select_option">请选择选项</string>
    <string name="submit_exam">提交答卷</string>
    <string name="pre_question">上一题</string>
    <string name="finish_current_exam">结束当前考试？</string>
    <string name="continue_exam">继续答题</string>
    <string name="yes">确定</string>
    <string name="back_home">返回主页</string>
    <string name="total_score">总得分</string>
    <string name="score">分</string>
    <string name="exam_success_finish">恭喜通过考试</string>
    <string name="reexam">重新测试</string>
    <string name="finish_exam_ac">考试结束</string>
    <string name="look_error_exam">查看错题</string>
    <string name="click_detail">点击查看详情</string>
</resources>
