<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.linkhand.mokao.ui.activity.login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x200">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/yuan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="logo"
            android:textColor="@color/colorTopic"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/x10"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        android:paddingTop="@dimen/x10"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:background="@null"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:hint="@string/hint_username"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/hintTextGray"
            android:textColorHint="@color/hintTextGray"
            android:textSize="14sp"/>
    </LinearLayout>

    <View
        style="@style/grayline_margin"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/x10"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        android:paddingTop="@dimen/x10"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x20"
            android:background="@null"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/hintTextGray"
            android:textColorHint="@color/hintTextGray"
            android:textSize="14sp"/>
    </LinearLayout>
    <View
        style="@style/grayline_margin"
        />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x30"
        android:background="@drawable/bg_textview_small_corner_redtopic"
        android:gravity="center"
        android:paddingBottom="@dimen/x10"
        android:paddingTop="@dimen/x10"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x15"
        android:background="@drawable/bg_textview_small_corner_line_redtopic"
        android:gravity="center"
        android:paddingBottom="@dimen/x10"
        android:paddingTop="@dimen/x10"
        android:text="@string/register"
        android:textColor="@color/colorTopic"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/x5"
        android:padding="@dimen/x10"
        android:text="@string/forgetPassword"
        android:textColor="@color/colorTopic"
        android:textSize="12sp"
        />

</LinearLayout>
