<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.linkhand.mokao.ui.activity.login.RegisterActivity">

    <include
        layout="@layout/include_header_white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x200">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/yuan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="logo"
            android:textColor="@color/colorTopic"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/x10"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        android:paddingTop="@dimen/x10"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:background="@null"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:hint="@string/hint_username"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/hintTextGray"
            android:textColorHint="@color/hintTextGray"
            android:textSize="14sp"/>
    </LinearLayout>


    <View
        style="@style/grayline_margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        >

        <EditText
            android:id="@+id/code_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/x13"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:layout_marginTop="@dimen/x13"
            android:layout_toLeftOf="@+id/btn_yanzheng"
            android:background="@null"
            android:digits="0123456789"
            android:gravity="left|center_vertical"
            android:hint="@string/hint_code"
            android:lines="1"
            android:maxLength="4"
            android:numeric="integer"
            android:textColor="@color/hintTextGray"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/btn_yanzheng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/x8"
            android:paddingLeft="@dimen/x10"
            android:paddingRight="@dimen/x10"
            android:paddingTop="@dimen/x8"
            android:text="@string/send_phone_code"
            android:textColor="@color/colorTopic"
            android:textSize="14sp"/>
    </RelativeLayout>

    <View
        style="@style/grayline_margin"/>


    <TextView
        android:id="@+id/next_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x30"
        android:background="@drawable/bg_textview_small_corner_redtopic"
        android:gravity="center"
        android:paddingBottom="@dimen/x10"
        android:paddingTop="@dimen/x10"
        android:text="@string/next_step"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        />
</LinearLayout>
