<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/defaultBackgroundGray"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x200"
        android:background="@color/colorTopic"
        >

        <LinearLayout
            android:id="@+id/header_image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/header_iv"
                android:layout_width="@dimen/x77"
                android:layout_height="@dimen/x77"
                android:src="@drawable/touxiang"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/x5"
                android:text="廖凡"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/red951"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/x3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x8"
                    android:layout_toRightOf="@+id/baiyin"
                    android:text="@string/my_exam_time"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/total_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x8"
                    android:text="6"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/x3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x8"
                    android:layout_toRightOf="@+id/baiyin"
                    android:text="@string/my_useful_time"
                    android:textColor="@color/colorWhite"/>

                <TextView
                    android:id="@+id/useful_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x8"
                    android:text="6"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/userinfo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/colorWhite"
        android:padding="@dimen/x10"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_userinfo"
            android:textColor="@color/blackText"
            android:textSize="14sp"/>


        <TextView
            android:id="@+id/userinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x3"
            android:layout_toLeftOf="@+id/go_iv"
            android:gravity="left"
            android:singleLine="true"
            android:text="ssss"
            android:textColor="@color/grayText"
            android:textSize="14sp"
            android:visibility="visible"/>

        <ImageView
            android:id="@+id/go_iv"
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/x14"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_go_right"
            />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/pay_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/colorWhite"
        android:padding="@dimen/x10"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_pay"
            android:textColor="@color/blackText"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/x14"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_go_right"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/error_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x10"
        android:background="@color/colorWhite"
        android:padding="@dimen/x10"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_error"
            android:textColor="@color/blackText"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/x14"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_go_right"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/setting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:background="@color/colorWhite"
        android:padding="@dimen/x10"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/my_setting"
            android:textColor="@color/blackText"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="@dimen/x14"
            android:layout_height="@dimen/x14"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_go_right"
            />
    </RelativeLayout>
</LinearLayout>