<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.linkhand.mokao.ui.activity.login.SetPasswordActivity">

    <include
        layout="@layout/include_header_white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x200">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/yuan"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="logo"
            android:textColor="@color/colorTopic"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/x10"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        android:paddingTop="@dimen/x10"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:background="@null"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:hint="@string/hint_password"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/hintTextGray"
            android:textColorHint="@color/hintTextGray"
            android:textSize="14sp"/>
    </LinearLayout>

    <View
        style="@style/grayline"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:gravity="center_vertical"
        android:paddingBottom="@dimen/x10"
        android:paddingLeft="@dimen/x10"
        android:paddingRight="@dimen/x10"
        android:paddingTop="@dimen/x10"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/password"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/password_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:background="@null"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnm"
            android:hint="@string/hint_password_second"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="20"
            android:textColor="@color/hintTextGray"
            android:textColorHint="@color/hintTextGray"
            android:textSize="14sp"/>

    </LinearLayout>


    <View
        style="@style/grayline"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        />
    <TextView
        android:id="@+id/subimt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginRight="@dimen/x10"
        android:layout_marginTop="@dimen/x30"
        android:background="@drawable/bg_textview_small_corner_redtopic"
        android:gravity="center"
        android:paddingBottom="@dimen/x10"
        android:paddingTop="@dimen/x10"
        android:text="@string/finish"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        />

</LinearLayout>
